@@ -10,6 +10,7 @@
   (system locale independent support of Latin and Cyrillic characters).
 * Implemented io::InSharedMemoryStream class for shared access to the data.
 * Deprecated io::IOutStream::writeb() function, use io::IOutStream::write_byte() instead.
+* Added possibility to create temporary files for io::NativeFile and io::OutFileStream.
 * Added support of SFZ file format parsing.
 * Updated build scripts.
 
